static fixed height so footer wouldnt overflow

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1703,7 +1703,7 @@ $gradient: #00b5f5;
 
 .newTownWrapper {
   width: 100%;
-  height: 100vh;
+  height: 930px;
   display: -ms-grid;
   display: grid;
   -ms-grid-rows: 1fr 1fr 1fr;
@@ -1769,7 +1769,7 @@ $gradient: #00b5f5;
 
 .newPartnerWrapper {
   width: 100%;
-  height: 100vh;
+  height: 930px;
   display: -ms-grid;
   display: grid;
   -ms-grid-rows: 1fr 1fr 1fr;
